processor/src/test/resources/tests/InvalidStrategyCombinations/PermissiveAndStrict/PermissiveAndStrict.java
package io.jonasg.bob.test;

import io.jonasg.bob.Buildable;
import io.jonasg.bob.Strategy;

@Buildable(strategy = { Strategy.PERMISSIVE, Strategy.STRICT })
public class PermissiveAndStrict {
}
